@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="DebugXP|Win32">
@@ -277,6 +277,7 @@
     <ClCompile Include="..\..\..\..\libntp\vint64ops.c" />
     <ClCompile Include="..\..\..\..\libntp\work_fork.c" />
     <ClCompile Include="..\..\..\..\libntp\work_thread.c" />
+    <ClCompile Include="..\..\..\..\libntp\xsbprintf.c" />
     <ClCompile Include="..\..\..\..\libntp\ymd2yd.c" />
     <ClCompile Include="..\..\..\..\lib\isc\assertions.c" />
     <ClCompile Include="..\..\..\..\lib\isc\backtrace-emptytbl.c" />
